# auc-os-lab-9

./: CMakeLists.txt  flake.nix  lab9.c  mmap_compute.c
numfiles/: 10.txt  100.txt  100000.txt  sum.py
